--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,38 +5,54 @@
 
     android:layout_height="fill_parent"
 
-    android:orientation="vertical" >
-
+    android:orientation="vertical">
 
 
     <TextView
-
         android:layout_width="fill_parent"
-
         android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:text="알람 페이지" />
 
-        android:text="Date Test" />
-
-
-    <Button
-
-        android:id="@+id/timepickerbutton"
-
-        android:layout_width="fill_parent"
-
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="337dp"
+            android:layout_height="40dp"
+            android:textSize="28dp"
+            android:text="아침 : 설정 안함" />
 
-        android:text="아침" />
-
-    <Button
-
-        android:id="@+id/timepickerbutton2"
-
-        android:layout_width="fill_parent"
-
+        <Button
+            android:id="@+id/timepickerbutton"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="right"
+            android:layout_margin="0dp"
+            android:onClick="timeSet"
+            android:text="설정" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="337dp"
+            android:layout_height="40dp"
+            android:textSize="28dp"
+            android:text="저녁 : 설정 안함" />
 
-        android:text="저녁" />
-
+        <Button
+            android:id="@+id/timepickerbutton2"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="right"
+            android:layout_margin="0dp"
+            android:onClick="timeSet"
+            android:text="설정" />
+    </LinearLayout>
 
 </LinearLayout>
