--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -28,6 +28,9 @@
             android:id="@+id/editText_context"
             android:layout_width="match_parent"
             android:layout_height="533dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="5dp"
             android:background="#eeeeee"
             android:ems="10"
             android:gravity="top"
@@ -36,10 +39,12 @@
 
         <Button
             android:id="@+id/bt_submit"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="작성" />
+            android:layout_height="69dp"
+            android:layout_marginTop="10dp"
+            android:text="작성"
+            android:textSize="24sp" />
 
 
     </LinearLayout>
