--- a/app/src/main/res/layout/row_goal.xml
+++ b/app/src/main/res/layout/row_goal.xml
@@ -1,45 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <!--    <RelativeLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content">-->
+    <!--        <ImageView-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:adjustViewBounds="true"-->
+    <!--            android:src="@drawable/img_view"/>-->
+    <!--        <TextView-->
+    <!--            android:id="@+id/textView"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="110dp"-->
+    <!--            android:layout_marginEnd="25dp"-->
+    <!--            android:visibility="invisible"-->
+    <!--            android:gravity="center_vertical|right"-->
+    <!--            android:fontFamily="@font/nsb"-->
+    <!--            android:text="Date" />-->
+    <!--        <TextView-->
+    <!--            android:id="@+id/textView2"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="110dp"-->
+    <!--            android:layout_marginTop="75dp"-->
+    <!--            android:layout_marginHorizontal="25dp"-->
+    <!--            android:gravity="center_vertical|center"-->
+    <!--            android:fontFamily="@font/nsb"-->
+    <!--            android:text="Date" />-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/textView3"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="60dp"-->
+    <!--            android:layout_marginStart="70dp"-->
+    <!--            android:gravity="center_vertical"-->
+    <!--            android:fontFamily="@font/nsb"-->
+    <!--            android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
+    <!--            android:text="\@Developer" />-->
+    <!--    </RelativeLayout>-->
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
+        android:layout_height="200dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="20dp"
+        android:layout_weight="0"
+        android:orientation="vertical">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:src="@drawable/img_view"/>
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="110dp"
-            android:layout_marginEnd="25dp"
-            android:visibility="invisible"
-            android:gravity="center_vertical|right"
-            android:fontFamily="@font/nsb"
-            android:text="Date" />
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="10dp"
+                app:srcCompat="@drawable/profile_icon_default" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/nsb"
+                android:text="\@Developer"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textSize="24sp" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_weight="0.2"
+                app:srcCompat="@drawable/profile_context_date" />
+
+        </LinearLayout>
+
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
-            android:layout_height="110dp"
-            android:layout_marginTop="75dp"
-            android:layout_marginHorizontal="25dp"
-            android:gravity="center_vertical|center"
-            android:fontFamily="@font/nsb"
-            android:text="Date" />
+            android:layout_height="133dp"
+            android:background="@drawable/rounded_corner"
+            android:fontFamily="@font/nbb"
+            android:gravity="center"
+            android:text="테스트라는 글씨다" />
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginStart="70dp"
-            android:gravity="center_vertical"
-            android:fontFamily="@font/nsb"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:text="\@Developer" />
-    </RelativeLayout>
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_weight="0"
+        android:background="@drawable/profile_context_bezel" />
 
 
 </LinearLayout>
