--- a/app/src/main/res/layout/actionbar_default.xml
+++ b/app/src/main/res/layout/actionbar_default.xml
@@ -20,22 +20,52 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="40dp"
+        <ImageButton
+            android:id="@+id/actionbar_prev"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="#00FFFFFF"
+            app:srcCompat="@color/colorAccent" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="0"
+                android:contentDescription="TODO"
+                app:srcCompat="@drawable/splash_icon" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="147dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:fontFamily="@font/ns"
+                android:text="@string/app_name"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp" />
+
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/actionbar_submit"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_marginRight="10dp"
-            android:layout_weight="0"
-            app:srcCompat="@drawable/splash_icon" />
+            android:layout_weight="1"
+            android:background="#00494949"
+            app:srcCompat="@color/colorAccent" />
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="147dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:fontFamily="@font/ns"
-            android:text="@string/app_name"
-            android:textColor="#FFFFFF"
-            android:textSize="24sp" />
     </LinearLayout>
+
 </RelativeLayout>
