--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -8,13 +8,15 @@
 
     <ImageView
         android:id="@+id/imageView6"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:scaleType="matrix"
+        android:tileMode="repeat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.51"
         app:srcCompat="@drawable/bg_paper" />
 
     <LinearLayout
@@ -38,8 +40,8 @@
             android:id="@+id/editText_context"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="42dp"
             android:layout_marginRight="5dp"
             android:layout_weight="7"
             android:background="#00EEEEEE"
@@ -47,7 +49,8 @@
             android:fontFamily="@font/nbb"
             android:gravity="top"
             android:inputType="textMultiLine"
-            android:text="test" />
+            android:text="test\nasdf\nasfasf\n테스트\ntest"
+            android:textSize="19sp" />
 
 
     </LinearLayout>
