--- a/app/src/main/res/layout/splash_intro.xml
+++ b/app/src/main/res/layout/splash_intro.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
@@ -8,12 +9,13 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageView4"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_marginBottom="20dp"
         android:layout_weight="0"
-        app:srcCompat="@drawable/splash_icon" />
+        android:contentDescription="@string/logo"
+        app:srcCompat="@drawable/splash_icon"
+        tools:srcCompat="@drawable/splash_icon" />
 
     <TextView
         android:id="@+id/textView6"
@@ -25,4 +27,5 @@
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="36sp" />
+
 </LinearLayout>
