--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -12,40 +12,37 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center_vertical"
-        android:layout_weight="6"
+        android:layout_weight="8"
         android:background="#D6675E"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center|center_vertical"
             android:ellipsize="marquee"
             android:focusable="true"
-            android:singleLine="true"
             android:focusableInTouchMode="true"
-            android:marqueeRepeatLimit="marquee_forever"
             android:fontFamily="@font/nsb"
-            android:text="TextView" />
+            android:marqueeRepeatLimit="marquee_forever"
+            android:singleLine="true"
+            android:text="TextView"
+            android:textColor="#FFFFFF" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/tapView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
-        android:orientation="vertical">
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/buttonView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1">
+
 
             <ImageButton
                 android:id="@+id/editButton"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
@@ -58,25 +55,19 @@
 
             <ImageButton
                 android:id="@+id/listButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:onClick="goToDiary"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/list" />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/buttonView2"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+
 
             <ImageButton
                 android:id="@+id/alarmButton"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
@@ -87,14 +78,13 @@
 
             <ImageButton
                 android:id="@+id/statisticsButton"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
                 app:srcCompat="@drawable/statics" />
-        </LinearLayout>
 
 
     </LinearLayout>
