--- a/app/src/main/res/layout/row_diary.xml
+++ b/app/src/main/res/layout/row_diary.xml
@@ -77,6 +77,13 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textSize="24sp" />
 
+            <TextView
+                android:id="@+id/textIdx"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:text="idex"
+                />
+
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="20dp"
