--- a/app/src/main/res/menu/diary_menu.xml
+++ b/app/src/main/res/menu/diary_menu.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/edit"
+        android:title="수정하기" />
+    <item
         android:id="@+id/del"
         android:title="삭제하기" />
 </menu>
