에디터 팝업 수정

--- a/app/src/main/res/layout/dialog_editor_tutorial.xml
+++ b/app/src/main/res/layout/dialog_editor_tutorial.xml
@@ -31,6 +31,7 @@
         android:fontFamily="@font/handwriting1"
         android:gravity="center"
         android:text="context"
+        android:scrollbars="vertical"
         android:textSize="24sp" />
 
     <Button
