--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,13 +20,17 @@
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <Button
-        android:id="@+id/button"
+    <TextView
+        android:id="@+id/tv1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="88dp"
         android:layout_marginTop="20dp"
-        android:text="아침 설정"
+        android:text="하루를 시작할 시간을 정해주세요!\n알람을 설정해드립니다."
+        android:lineSpacingMultiplier="1.5"
+        android:textAlignment="center"
+        android:fontFamily="@font/nsb"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/timePicker"
