--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -36,12 +36,33 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="13dp"
+            android:layout_marginLeft="30dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/editText_title"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#00FFFFFF"
+                android:ems="10"
+                android:fontFamily="@font/nbb"
+                android:gravity="center_vertical"
+                android:inputType="textPersonName"
+                android:text="제목"
+                android:textSize="30sp" />
+        </LinearLayout>
+
         <EditText
             android:id="@+id/editText_context"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="42dp"
+            android:layout_marginTop="0dp"
             android:layout_marginRight="5dp"
             android:layout_weight="7"
             android:background="#00EEEEEE"
@@ -50,7 +71,7 @@
             android:gravity="top"
             android:inputType="textMultiLine"
             android:text="test\nasdf\nasfasf\n테스트\ntest"
-            android:textSize="19sp" />
+            android:textSize="18.5sp" />
 
 
     </LinearLayout>
