--- a/app/src/main/res/layout/actionbar_editor.xml
+++ b/app/src/main/res/layout/actionbar_editor.xml
@@ -64,6 +64,7 @@
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:layout_weight="0"
+            android:alpha="0.4"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:scaleType="fitCenter"
             android:scaleX="0.35"
