--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -19,7 +19,7 @@
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="119dp"
             android:layout_gravity="center|center_vertical"
             android:ellipsize="marquee"
             android:focusable="true"
@@ -29,6 +29,39 @@
             android:singleLine="true"
             android:text="TextView"
             android:textColor="#FFFFFF" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#D6675E"
+            android:orientation="vertical">
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                android:progress="80"
+                android:progressDrawable="@drawable/progress"
+                android:rotation="-90" />
+        </LinearLayout>
+
+        <!--        <ProgressBar-->
+<!--            android:id="@+id/progressBar"-->
+<!--            style="?android:attr/progressBarStyle"-->
+<!--            android:layout_width="362dp"-->
+<!--            android:layout_height="232dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:longClickable="false"-->
+<!--            android:progress="30"-->
+<!--            android:progressDrawable="@drawable/progress" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/textView7"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="#D66752"-->
+<!--            android:text="TextView" />-->
     </LinearLayout>
 
     <LinearLayout
