--- a/app/src/main/res/layout/content_goal.xml
+++ b/app/src/main/res/layout/content_goal.xml
@@ -4,8 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#cccccc"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".GoalActivity"
     tools:showIn="@layout/activity_goal">
 
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/handwriting1"
+        android:text="습관 목록이 비었어요!\n한번 도전해볼까요?"
+        android:textAlignment="center"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
