--- a/app/src/main/res/layout/content_goal.xml
+++ b/app/src/main/res/layout/content_goal.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="40dp"
         android:fontFamily="@font/handwriting1"
         android:text="습관 목록이 비었어요!\n한번 도전해볼까요?"
+        android:lineSpacingMultiplier="1.3"
         android:textAlignment="center"
         android:textSize="36sp"
         android:textStyle="bold"
