--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -42,14 +42,26 @@
                 android:text="TextView"
                 android:textColor="#FFFFFF" />
 
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyleHorizontal"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:progress="80"
-                android:progressDrawable="@drawable/progress"
-                android:rotation="-90" />
+                android:layout_height="match_parent">
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:progress="80"
+                    android:progressDrawable="@drawable/progress"
+                    android:rotation="-90" />
+
+                <TextView
+                    android:id="@+id/levelView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="TextView"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display3" />
+            </RelativeLayout>
         </LinearLayout>
 
         <!--        <ProgressBar-->
