--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -19,6 +19,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/splash_icon" />
+        app:srcCompat="@drawable/actionbar_new" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
