--- a/app/src/main/res/layout/content_diary.xml
+++ b/app/src/main/res/layout/content_diary.xml
@@ -14,8 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/handwriting1"
-        android:text="일기장이 비었어요!\n한번 작성하러 가볼까요?"
         android:lineSpacingMultiplier="1.3"
+        android:text="일기장이 비었어요!\n오늘은 어떤 일이 있었나요?"
         android:textAlignment="center"
         android:textSize="36sp"
         android:textStyle="bold"
