--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D86D1B</color>
-    <color name="colorNegative">#C5BBBB</color>
+    <color name="colorNegative">#B8B8B8</color>
 </resources>
