--- a/app/src/main/res/layout/row_goal.xml
+++ b/app/src/main/res/layout/row_goal.xml
@@ -47,7 +47,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="20dp"
@@ -74,22 +74,14 @@
                 android:layout_weight="1"
                 android:fontFamily="@font/nsb"
                 android:text="\@Developer"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textSize="24sp" />
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_weight="0.2"
-                app:srcCompat="@drawable/profile_context_date" />
+                android:textSize="18sp" />
 
         </LinearLayout>
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
-            android:layout_height="133dp"
+            android:layout_height="0dp"
             android:background="@drawable/rounded_corner"
             android:fontFamily="@font/nbb"
             android:gravity="center"
@@ -100,7 +92,7 @@
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="3dp"
         android:layout_weight="0"
         android:background="@drawable/profile_context_bezel" />
 
