--- a/app/src/main/res/layout/activity_goal.xml
+++ b/app/src/main/res/layout/activity_goal.xml
@@ -66,7 +66,7 @@
                 android:layout_weight="1"
                 android:layout_marginHorizontal="50dp"
                 android:gravity="center"
-                android:text="반복" />
+                android:text="매일" />
 
         </LinearLayout>>
         <ListView
