--- a/app/src/main/res/layout/row_diary.xml
+++ b/app/src/main/res/layout/row_diary.xml
@@ -61,7 +61,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/goal_icon"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginRight="10dp"
